--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,12 @@ body {
 	font-size: 16px;
 	font: 100%;
 	max-width: 100%;
-	font-family: 'Libre Baskerville', serif;
+	font-family: 'Gloria Hallelujah', cursive;
+}
+
+body {
+	background-image: url("background.svg");
+	color: #00004d;
 }
 
 *,
@@ -14,4 +19,51 @@ body {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+button {
+	font-family: Arial, Helvetica, sans-serif;
+	margin-top: 10px;
+	background-color: transparent;
+	border: none;
+}
+
+.recipePanel .recipePanel-header {
+	background-color: #cce6ff;
+}
+.recipePanel-title a {
+	display: block;
+	font-size: 18px;
+	color: #00004d;
+}
+
+.panelButton {
+	color: #00004d;
+	font-size: 16px;
+}
+
+#addRecipeButton {
+	background-color: #00004d;
+	color: #fff;
+}
+
+#addRecipeButton:hover {
+	background-color: #0059b3;
+}
+
+.panel.recipePanel,
+.panel .panel-heading.recipePanel-heading {
+	background-color: transparent;
+	font-size: 18px;
+	line-height: 1.8;
+	border: none;
+}
+
+#accordion .panel .panel-body.recipePanel-body {
+	border-top: none;
+}
+
+form .recipeForm {
+	background-color: rgba(255, 255, 255, 0.8);
+	color: #00004d;
 }
